# SourceBuilder

./: .gitignore  CMakeLists.txt  README.md
CinePaint/: CMakeLists.txt
Glasgow/: CMakeLists.txt
Iroha/: missing.txt
cmake/: FLTK.cmake  Flags.cmake  LibJPEG.cmake  LibPNG.cmake  LibUnistd.cmake  NASM.cmake  OpenEXR.cmake  Zlib.cmake
docs/: clone_depth.txt  cmake_macro.txt
